--- a/platform/src/main/resources/templates/catalog.html
+++ b/platform/src/main/resources/templates/catalog.html
@@ -40,15 +40,15 @@
       </tr>
       <tr>
         <td>列表</td>
-        <td><a href="jie/index.html" target="_blank">jie/index.html</td>
+        <td><a href="question/index.html" target="_blank">jie/index.html</td>
       </tr>
       <tr>
         <td>详情</td>
-        <td><a href="jie/detail.html" target="_blank">jie/detail.html</td>
+        <td><a href="question/detail.html" target="_blank">jie/detail.html</td>
       </tr>
       <tr>
         <td>发帖/编辑</td>
-        <td><a href="jie/add.html" target="_blank">jie/add.html</td>
+        <td><a href="question/add.html" target="_blank">jie/add.html</td>
       </tr>
 
       <tr>
