节点帖子；签到实体类

--- a/platform/src/main/resources/templates/catalog.html
+++ b/platform/src/main/resources/templates/catalog.html
@@ -96,15 +96,15 @@
       </tr>
       <tr>
         <td>提示</td>
-        <td><a href="other/tips.html" target="_blank">other/tips.html</td>
+        <td><a href="error/tips.html" target="_blank">other/tips.html</td>
       </tr>
       <tr>
         <td>公告</td>
-        <td><a href="other/notice.html" target="_blank">other/notice.html</td>
+        <td><a href="error/notice.html" target="_blank">other/notice.html</td>
       </tr>
       <tr>
         <td>404</td>
-        <td><a href="other/404.html" target="_blank">other/404.html</td>
+        <td><a href="error/404.html" target="_blank">other/404.html</td>
       </tr>
     </tbody>
   </table>
