--- a/platform/src/main/resources/static/res/css/global.css
+++ b/platform/src/main/resources/static/res/css/global.css
@@ -372,7 +372,7 @@ body .layui-edit-face  .layui-layer-content{padding:0; background-color:#fff; co
 .jieda-body{margin: 25px 0 20px; min-height: 0; line-height: 24px; font-size:14px;}
 .jieda-body p{margin-bottom: 10px;}
 .jieda-body a{color:#4f99cf}
-.jieda-reply{position:relative;}
+.jieda-reply{position:absolute;right:0;bottom: 8px}
 .jieda-reply span{padding-right:20px; color:#999; cursor:pointer;}
 .jieda-reply span:hover{color:#666;}
 .jieda-reply span i{margin-right:5px; font-size:16px;}
