--- a/platform/src/main/resources/static/res/css/global.css
+++ b/platform/src/main/resources/static/res/css/global.css
@@ -247,7 +247,7 @@ pre{padding: 10px 15px; margin: 10px 0; font-size: 12px; border-left: 6px solid 
 .fly-list-info .icon-renzheng{position: relative; top: 1px; margin-right: 3px;}
 .fly-list-info .fly-badge-vip{position: relative; margin-left: 2px;}
 .fly-list-kiss{color: #FF5722;}
-.fly-list-nums{position: absolute; right: 0; top: 0; padding-right: 0!important;}
+.fly-list-nums{position: absolute; right: 0;  padding-right: 0!important;}
 .fly-list-nums i{position: relative; padding: 0 3px 0 15px;}
 
 .fly-list-badge{position: absolute; right: 15px; top: 15px; font-size: 0;}
