--- a/platform/src/main/resources/templates/u/forget.html
+++ b/platform/src/main/resources/templates/u/forget.html
@@ -15,7 +15,7 @@
 <div class="fly-header layui-bg-black">
   <div class="layui-container">
     <a class="fly-logo" href="/">
-      <img src="../../res/images/logo.png" alt="layui">
+      <img src="../../res/images/logo.png" alt="oscer">
     </a>
     <ul class="layui-nav fly-nav layui-hide-xs">
       <li class="layui-nav-item layui-this">
