--- a/platform/src/main/resources/static/res/css/global.css
+++ b/platform/src/main/resources/static/res/css/global.css
@@ -1746,13 +1746,16 @@ body .fly-user-main {
 
 /*.home-jieda li{margin-bottom:20px; padding-bottom:10px; line-height:24px; border-bottom: 1px dotted #DFDFDF;}*/
 .home-jieda li {
+    position: relative;
     margin-bottom: 20px;
     line-height: 24px;
+    padding: 0px 15px 10px 75px;
+    border-bottom: 1px dotted #e2e2e2;
 }
 
 .home-dacontent {
     margin-top: 10px;
-    padding: 10px 15px;
+    padding: 10px 4px;
     background-color: #F2F2F5;
     border-radius: 5px;
     word-wrap: break-word;;
