【样式】手机端，顶部logo样式调整

--- a/platform/src/main/resources/static/res/css/global.css
+++ b/platform/src/main/resources/static/res/css/global.css
@@ -2322,3 +2322,9 @@ body .fly-user-main {
     line-height: 20px;
     font-size: 10px !important;
 }
+
+@media screen and (max-width: 750px){
+    .fly-logo {
+        left: 5px!important;
+    }
+}
