【优化】去掉forever-base架包依赖

--- a/platform/src/main/resources/static/res/css/global.css
+++ b/platform/src/main/resources/static/res/css/global.css
@@ -2328,3 +2328,9 @@ body .fly-user-main {
         left: 5px!important;
     }
 }
+
+.layui-upload-img {
+    width: 100px;
+    height: 100px;
+    margin: 0 10px 10px 0;
+}
