--- a/platform/src/main/resources/static/res/css/global.css
+++ b/platform/src/main/resources/static/res/css/global.css
@@ -2334,3 +2334,171 @@ body .fly-user-main {
     height: 100px;
     margin: 0 10px 10px 0;
 }
+
+.hour-tx{
+    width: 38px;
+    border-radius: 50%;
+    height: 38px;
+}
+
+.hour-head li {
+    float: left;
+    border-bottom: none!important;
+}
+
+.hour-head li:nth-child(2) {
+    overflow: hidden;
+    /*width: 12%;*/
+}
+
+.hour-head li {
+    float: left;
+    border-bottom: none!important;
+}
+
+.hour-head {
+    overflow: hidden;
+}
+
+.hour-head li:nth-child(2) p:first-child {
+    font-weight: 700;
+    font-size: 18px;
+    white-space: nowrap;
+    overflow: hidden;
+    text-overflow: ellipsis;
+}
+
+.hour-head li:nth-child(2) p:nth-child(2) {
+    font-size: 12px!important;
+    color: rgba(0,0,0,.4);
+}
+
+.moder-story-list ul li .story-content p {
+    font-size: 12px;
+    /* color: #777; */
+    /* line-height: 24px; */
+}
+.moder-story-list ul li p {
+    padding: 0 20px;
+}
+.hour-head li p {
+    margin: 0;
+    padding: 0!important;
+    line-height: 20px!important;
+    height: 20px;
+    /* background: #fafafa!important; */
+}
+
+moder-story-list ul li .story-content p {
+    font-size: 12px;
+    /* color: #777; */
+    /* line-height: 24px; */
+}
+
+.moder-story-list ul li p {
+    padding: 0 20px;
+}
+
+.moder-story-list ul li {
+    border-bottom: 1px solid #f0f0f0;
+    padding: 4px 4px 0px 8px;
+}
+
+.btn-blue-cy {
+    width:100%;
+    height:36px;
+    background-color:#3ca5f6;
+    color:#fff;
+    font-size:16px;
+    text-align:center;
+    line-height:36px;
+    border-radius:0;
+}
+
+.anim-opacity2{animation: 1.5s opacity2 0s infinite; -webkit-animation: 1.5s opacity2 0s infinite;-moz-animation: 1.5s opacity2 0s infinite;}
+@keyframes opacity2{
+    0%{opacity:0}
+    50%{opacity:.8;}
+    100%{opacity:0;}
+}
+@-webkit-keyframes opacity2{
+    0%{opacity:0}
+    50%{opacity:.8;}
+    100%{opacity:0;}
+}
+@-moz-keyframes opacity2{
+    0%{opacity:0}
+    50%{opacity:.8;}
+    100%{opacity:0;}
+}
+
+.mod-b {
+    height: 168px;
+    border-bottom: 1px solid #f0f0f0;
+    position: relative;
+    padding: 20px 10px 0;
+}
+
+
+.mod-white {
+    background: #FFFFFF;
+}
+
+@media (max-width: 768px){
+    .mob-ctt {
+        width: 100%;
+    }
+
+    .mob-ctt {
+        position: relative;
+        float: left;
+        width: 70%;
+    }
+}
+
+@media (max-width: 768px) {
+    .tweetAllList {
+        margin-top: 1%;
+        position: relative;
+        margin: 0 auto;
+        width: 100%;
+    }
+    .tweet-push{
+        width: 100% !important;
+        margin-left: unset !important;
+    }
+
+    .hotTweetList{
+        margin-top: 30px;
+        width: 100%;
+    }
+}
+
+@media (min-width: 768px) {
+    .tweetAllList {
+        margin-top: 1%;
+        width: 48%;
+        margin-left: 11%;
+        /* padding-right: 15px; */
+        padding-left: 15px;
+        /* margin-right: auto; */
+        float: left !important;
+    }
+}
+
+@media (min-width: 768px) {
+    .hotTweetList {
+        margin-top: 1%;
+        width: 30%;
+        float: right !important;
+        margin-right: 8%;
+    }
+}
+
+.mob-author .time{
+    margin-left: 20px;
+}
+
+.mob-author .layui-icon{
+    padding: 0 10px;
+}
